syntax = "proto3";

package connections.v1;

import "tagger/tagger.proto";
import "validate/validate.proto";

option go_package = "github.com/powertoolsdev/mono/pkg/types/components/connections/v1";

// InstanceConnection represents a connection to another component in the same app, deployed to the same install.
message InstanceConnection {
  string component_id = 1 [
    (validate.rules).string.len = 26,
    (tagger.tags) = "faker:\"shortID\""
  ];

  string install_id = 2 [
    (validate.rules).string.len = 26,
    (tagger.tags) = "faker:\"shortID\""
  ];

  string deploy_id = 3 [
    (validate.rules).string.len = 26,
    (tagger.tags) = "faker:\"shortID\""
  ];

  string component_name = 4;
  string var_name = 5;
}
